[workspace]
resolver = "2"
members = [
    "address-generator",
    "balance-checker",
    "block-explorer",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["BDK Experiments Contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Shared dependencies across all tools
clap = { version = "4.5", features = ["derive"] }

# BDK dependencies
bdk = "0.28"
bdk_wallet = "1.0"

# Utilities
chrono = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.12", features = ["json"] }
